--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/60018bc0e9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -77,7 +78,7 @@
     <section class="section">
       <div class="section-container">
         <div class="section-image">
-          <img src="./assets/images/logo-card-2.5.png" class="section-logo" alt="" />
+          <img src="./assets/images/logo-card-4.5.png" class="section-logo" alt="" />
         </div>
         <div class="section-content">
           <h2>Welcome</h2>
@@ -87,6 +88,6 @@
         </div>
       </div>
     </section>
-    <script type="text/javascript" src="./js/app.js" charset="utf-8"></script>
+    <script type="module" src="./js/app.js" charset="utf-8"></script>
   </body>
 </html>
