--- a/pages/home.html
+++ b/pages/home.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -253,8 +254,10 @@
     <main class="deck-section">
       <i class="fa-solid fa-circle-play"></i>
       <h2>Deck</h2>
-      <div class="deck-section-container"></div>
+      <div class="deck-section-container">
 
+      </div>
+      
       <div class="choose-deck-overlay"></div>
       <div class="choose-deck-container">
         <div class="circle-display"></div>
