some responsiveness have been added

--- a/pages/home.html
+++ b/pages/home.html
@@ -252,7 +252,9 @@
     </header>
 
     <main class="deck-section">
-      <i class="fa-solid fa-circle-play"></i>
+      <div class="play-button-container">
+        <i class="fa-solid fa-circle-play"></i>
+      </div>
       <h2>Deck</h2>
       <div class="deck-section-container">
 
