--- a/pages/home.html
+++ b/pages/home.html
@@ -49,9 +49,12 @@
             <span> Theme </span>
           </div>
 
-          <div class="profile-cell table">
-            <span> Documentation </span>
-          </div>
+          <a href="https://cardsdocs-sugune.vercel.app/ " class="profile-cell table">
+            <span>
+             
+                Documentation
+            </span>
+          </a>
 
           <div class="profile-cell profile-logout">
             <button class="profile-logout-btn">Logout</button>
@@ -256,10 +259,8 @@
         <i class="fa-solid fa-circle-play"></i>
       </div>
       <h2>Deck</h2>
-      <div class="deck-section-container">
+      <div class="deck-section-container"></div>
 
-      </div>
-      
       <div class="choose-deck-overlay"></div>
       <div class="choose-deck-container">
         <div class="circle-display"></div>
@@ -275,13 +276,14 @@
 
           <div class="unavailable-message-container">
             <div class="unavailable-message">
-              Venture Forth, Valiant Player! While the feature you seek is not yet
-    within reach, fear not, for the development is underway. Immerse
-    yourself in the current challenges, for soon I'll unleash a gaming
-    marvel that will shatter expectations and introduce a fresh wave of
-    excitement. Stay vigilant, player, as this game evolves with my
-    unwavering determination to deliver an extraordinary experience tailored
-    just for you!      </div>
+              Venture Forth, Valiant Player! While the feature you seek is not
+              yet within reach, fear not, for the development is underway.
+              Immerse yourself in the current challenges, for soon I'll unleash
+              a gaming marvel that will shatter expectations and introduce a
+              fresh wave of excitement. Stay vigilant, player, as this game
+              evolves with my unwavering determination to deliver an
+              extraordinary experience tailored just for you!
+            </div>
             <div class="ok-btn">Ok</div>
           </div>
 
