--- a/pages/home.html
+++ b/pages/home.html
@@ -17,6 +17,11 @@
     ></script>
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/home.css" />
+    <link
+      rel="icon"
+      href="../assets/logos/green-apple-icon.png"
+      type="image/png"
+    />
   </head>
   <body>
     <header class="home-header">
