--- a/pages/slide.html
+++ b/pages/slide.html
@@ -11,6 +11,11 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://kit.fontawesome.com/60018bc0e9.js" crossorigin="anonymous"></script>
     <link
+      rel="icon"
+      href="../assets/logos/green-apple-icon.png"
+      type="image/png"
+    />
+    <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
 />
