--- a/pages/writing.html
+++ b/pages/writing.html
@@ -19,6 +19,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
+    <link
+      rel="icon"
+      href="../assets/logos/green-apple-icon.png"
+      type="image/png"
+    />
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="../css/global.css" />
     <link rel="stylesheet" href="../css/writing.css" />
