--- a/pages/home.html
+++ b/pages/home.html
@@ -54,7 +54,7 @@
             <span> Theme </span>
           </div>
 
-          <a href="https://cardsdocs-sugune.vercel.app/ " class="profile-cell table">
+          <a href="https://cryptic-docs.vercel.app/ " class="profile-cell table">
             <span>
              
                 Documentation
